samples/_failures_safe/1761044060_e926cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8a89be1.c: In function ‘main’:
./samples/SAFE/__tmp_e8a89be1.c:154:18: error: expected ‘;’ at end of input
  154 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_e8a89be1.c:154:13: error: expected declaration or statement at end of input
  154 |             break
      |             ^~~~~
./samples/SAFE/__tmp_e8a89be1.c:154:13: error: expected declaration or statement at end of input
